Closed
Bug 693406
Opened 14 years ago
Closed 14 years ago
INFERFLAGS=full causes assertion with multi-compartment tests
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla10
People
(Reporter: jimb, Unassigned)
Details
(Whiteboard: [inbound])
Attachments
(1 file)
When ISpewResult is enabled, js_DestroyContext walks over all the
compartments and dumps their types. However, it doesn't switch the context
to each compartment as it does so, so the context passed in to all the
print calls may not be in the same compartment as the scripts whose type
inference results it's printing. This means that
AutoEnterAnalysis enter(cx);
sets the activeAnalysis flag in the wrong compartment, leading to assertion
failures in functions like js::analyze::ScriptAnalysis::slotEscapes.
Attachment #566006 -
Flags: review?(bhackett1024)
Updated•14 years ago
|
Attachment #566006 -
Flags: review?(bhackett1024) → review+
| Reporter | ||
Comment 1•14 years ago
|
||
Status: NEW → ASSIGNED
Whiteboard: [inbound]
Comment 2•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla10
You need to log in
before you can comment on or make changes to this bug.
Description
•